# NoFakeNewsApp

./: README.md  app.py  pyproject.toml  requirements.txt  scraper.py
_site/: README.md  app.py  pyproject.toml
extension/: README.md  manifest.json
model/: nfn_model.ipynb
scraper/: cna.py  cna_covid.csv  cna_covid.py  cna_cri.csv  cna_cri.py  cna_ent.csv  cna_ent.py  cna_health.csv  cna_health.py  cna_sus.csv  cna_sus.py  onion_ent.csv  onion_ent.py  onion_loc.csv  onion_loc.py  onion_new.csv  onion_new.py  onion_pol.csv  onion_pol.py  straits_con.csv  straits_con.py  straits_cou.csv  straits_cou.py  straits_env.csv  straits_env.py  straits_hea.csv  straits_hea.py  straits_job.csv  straits_job.py  straits_pol.csv  straits_pol.py  straits_tra.csv  straits_tra.py
src/model/: nfn_model.ipynb
static/: style.css
templates/: home.html  result.html
