[tool.poetry]
name = "nofakenews"
version = "0.1.0"
description = "An AI-powered browser extension that detects fake news."
authors = ["objecteds <objecteds@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.4.3"
tensorflow = "^2.9.1"
Flask = "^2.1.3"
numpy = "^1.23.1"
nltk = "^3.7"
keras = "^2.9.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
